snart